# trait-interp

./: .gitignore  .gitignore-public  .publicinclude  .railwayignore  BATCHING_IMPLEMENTED.md  BATCHING_SUMMARY.md  CLAUDE.md  CLEAN_EXTRACTION_PLAN.md  COGNITIVE_PRIMITIVES_GUIDE.md  COMPLETE_PIPELINE_PLAN.md  CURRENT_STATUS.md  EXPERIMENTAL_PLAN.md  FINAL_DECISION.md  LICENSE  METHODOLOGY_FIXES_REPORT.md  MORNING_QUICKSTART.md  NATURAL_SCENARIOS_STATUS.md  NEXT_STEPS.md  NEXT_STEPS_RECOMMENDATIONS.md  OPUS_TRAIT_GENERATION_GUIDE.md  OVERNIGHT_PLAN.md  OVERNIGHT_RUN.md  OVERNIGHT_SESSION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_CONTINUATION_GUIDE.md  PHASE2_STATUS.md  PUBLIC_REPO_SETUP.md  Procfile  QUICK_START_GUIDE.md  RAILWAY_DEPLOY.md  README.md  REFACTOR.md  REFACTOR_PHASE2_TODO.md  REMOTE_A100_SETUP.md  REMOTE_CLAUDE_CODE_INSTRUCTIONS.md  REMOTE_CROSS_DIST_INSTRUCTIONS.md  REMOTE_EXTRACTION_GUIDE.md  REMOTE_INSTRUCTIONS.md  REMOTE_SETUP.md  REMOTE_SETUP_GUIDE.md  (+40 more)
analysis/: README.md  audit_bleachers_talk_visuals.py  classify_funding_email_rollouts.py  component_comparison.py  cross_distribution_scanner.py  data_checker.py  extraction_quality_audit.py  extraction_quality_report.py  funding_email_final_classification.py  massive_activations.py  massive_activations_per_layer.py  prefill_detection_analysis.py  quality_report.py  top_activating_responses.py  trait_correlation.py  validate_scaling_law.py
archive/: wrong_transformer_from_scratch.py
config/: loras.yaml  paths.yaml  trait_lenses.yaml
core/: __init__.py  backends.py  generation.py  hooks.py  judge.py  (+8 more)
(+6246 files in other folders)
